<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="this_table_does_not_have_order_yet">There no order at this table yet!</string>
    <string name="wait_until_anybody_make_an_order_and_then_come_back">Wait until anybody make an order at this table and then come back!</string>
    <string name="looks_like_you_have_active_actions">Looks like you have active actions</string>
    <string name="order_is_cooking">Order is cooking</string>
    <string name="order_is_finished">Order is finished</string>
    <string name="time_to_go_back_to_work">Time to go back to work!</string>
    <string name="rest_come_to_end">Your rest has come to end! It`s time to work!</string>
    <string name="you_have_to_wait_until_they_finished_before_log_in_or_creating_account">You have to wait until they finished to perform this action!</string>
    <string name="you_are_next">Get ready! You are next!</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="wrong_email">Invalid email</string>
    <string name="timer">Timer</string>
    <string name="this_password_is_too_short">This password is too short(less than 6 symbols)</string>
    <string name="select_time">Select time</string>
    <string name="account_with_this_email_is_already_exist">Account with this email is already exist!</string>
    <string name="no_estimated_time_yet">No estimated time yet!</string>
    <string name="restaurant_title">Restaurant</string>
    <string name="you_have_to_add_at_least_1_dish_to_create_order">You have to add at least 1 dish to create order</string>
    <string name="you_have_to_add_at_least_2_variants">You have to add at least 2 variants</string>
    <string name="name_can_not_be_required">Name can`t be empty</string>
    <string name="this_data_is_required">This data is required</string>
    <string name="restaurant_visitor">Restaurant visitor</string>
    <string name="name_cannot_be_null">Name can`t be empty!</string>
    <string name="phone_must_be_full">Phone must be full!</string>
    <string name="current_location">Current Location</string>
    <string name="app_name" translatable="false">QuServe</string>
    <string name="title_home">Home</string>
    <string name="title_queue">Queue</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="smart_queue" translatable="false">Smart Queue</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="history">History</string>
    <string name="change_photo">Change photo</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet? Sign up!</string>
    <string name="create_a_new_account">Create a new account!</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="contact_information">Contact Information</string>
    <string name="save">Save</string>
    <string name="verify_your_email">Verify your email!</string>
    <string name="we_send_a_verification_link_to">We have send a verification link to </string>
    <string name="click_the_link_on_the_email_to_get_started">Click the link on the email to get started!</string>
    <string name="done">Done</string>
    <string name="failed_to_verify_email">Failed to verify email!</string>
    <string name="email_is_not_verified_please_try_again">Email is not verified. Please, try again.</string>
    <string name="ok" translatable="false">Oк</string>
    <string name="welcome">Welcome back!</string>
    <string name="skip">SKIP</string>
    <string name="create_account_to_get_all_features">Create account to get all features</string>
    <string name="already_have_account">Already have account?</string>
    <string name="gender">Gender</string>
    <string name="my_details">My details</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="email_is_required">Email is required!</string>
    <string name="user_name_is_required">User name is required!</string>
    <string name="password_is_required">Password is required!</string>
    <string name="privacy">Privacy and security</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="help">Help</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="addition">""</string>
    <string name="failed_to_login">Failed to login!</string>
    <string name="change_email">Change email</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <string name="failed">Failed!</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="this_price_should_be_less">The price should be less than one million</string>
    <string name="update_successful">Update successful!</string>
    <string name="new_email">New email</string>
    <string name="verify_your_email_before_update">Verify your email before update</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="you_cannot_undo_this_action">You cannot undo this action</string>
    <string name="delete">Delete</string>
    <string name="about_us">About us</string>
    <string name="your_question">Your question</string>
    <string name="write_us_email_so_we_will_be_able_to_help_you">Write us email, so we can help you!</string>
    <string name="have_a_problem">Have a problem?</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="set_queue_life_time">Disable queue in:</string>
    <string name="no_set_lifetime">No time</string>
    <string name="choose_lifetime">Time:</string>
    <string name="select_item">Select item</string>
    <string-array name="lifetime">
        <item>Do not disable</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>1 month</item>
        <item>6 months</item>
        <item>1 year</item>
    </string-array>
    <string name="invite_users_to_your_queue">Invite users to your queue</string>
    <string name="choose_queue_location">Choose location</string>
    <string name="open_map">Open Map</string>
    <string name="search">Search</string>
    <string name="your_location">Your location</string>
    <string name="choose">Choose</string>
    <string name="your_queue_has_been_successfully_created">Your Queue Was Successfully Created!</string>
    <string name="see_details">See Details</string>
    <string name="success">Success!</string>
    <string name="queue_s_length">Queue`s Length:</string>
    <string name="join_queue">Join Queue</string>
    <string name="location_header">Location:</string>
    <string name="description">Description:</string>
    <string name="your_queue_was_created">Your Queue Was Created!</string>
    <string name="show_this_qr_code_to_people_who_are_looking_forward_to_join_your_queue">Show this qr-code to people who are looking forward to join your queue</string>
    <string name="do_you_want_to_join">Do you want to join</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="download_pdf">Download pdf</string>
    <string name="dowload_pdf_description">Print your qr-code so people can easily join your queue</string>
    <string name="pause_queue">Pause Queue</string>
    <string name="pause_queue_description">Take a little rest and inform queue participants about it</string>
    <string name="participants_list">Participants List</string>
    <string name="participants_list_description">Serve people and move the queue</string>
    <string name="finish_queue">Finish Queue</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_want_to_download_qr_code_pdf_file">you want to download qr-code pdf file?</string>
    <string name="participant">Participant</string>
    <string name="next_participant">Next Participant</string>
    <string name="leave_queue">Leave queue</string>
    <string name="estimated_waiting_time">Estimated waiting time:</string>
    <string name="people_before_you">People before you:</string>
    <string name="useful_tips">Useful tips:</string>
    <string name="tips_description">Enjoy your time while waiting! We will send you a notification when it`s your turn! </string>
    <string name="leave">Leave</string>
    <string name="are_you_sure_you_want_to_leave_the_queue">Are you sure you want to leave the queue?</string>
    <string name="are_you_sure_you_want_to_finish_queue">Are you sure you want to finish queue?</string>
    <string name="you_won_t_be_able_to_undo_this_action">You won`t be able to undo this action</string>
    <string name="finish">Finish</string>
    <string name="your_password_has_been_updates_successfully">Your password has been updates successfully!</string>
    <string name="change_role">Change role</string>
    <string name="change_your_employee_s_role_in_company">Change your employee`s role in company</string>
    <string name="admin">Admin</string>
    <string name="manages_workers">Manages workers</string>
    <string name="manages_company_n_queues">Manages company \nqueues</string>
    <string name="worker">Worker</string>
    <string name="serves_customers">Serves customers</string>
    <string name="change">Change</string>
    <string name="ooops">Ooops!</string>
    <string name="slow_or_no_internet_connection">Slow or no internet connection</string>
    <string name="check_your_network_settings_and_try_again">Check your network settings and try again!</string>
    <string name="try_again">Try again</string>
    <string name="queue">Queue</string>
    <string name="create_your_own_queue_serve_people_and_save_your_time_using_easy_and_comfortable_interface_which_will_also_attract_new_visitors_to_you">Create your own queue, serve people and save your time using easy and comfortable interface which will also attract new visitors to you!</string>
    <string name="queue_creation">Queue creation</string>
    <string name="joining_to_queue">Joining to queue</string>
    <string name="become_queue_participant_and_get_estimated_time_waiting_and_a_number_of_people_before_you">Become queue participant and get estimated time waiting and a number of people before you</string>
    <string name="manages_nassigned_queues">Manages \nassigned queues</string>
</resources>