<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/have_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/have_a_problem"
        android:textSize="18sp"
        android:fontFamily="@font/bold_roboto"
        android:textColor="@color/strokeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/write_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/write_us_email_so_we_will_be_able_to_help_you"
        android:fontFamily="@font/regular"
        android:textColor="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_problem" />

    <EditText
        android:id="@+id/your_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/strokeColor"
        android:hint="@string/your_question"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_us" />

    <android.widget.Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparent"
        android:fontFamily="@font/regular"
        android:text="@string/cancel"
        android:textColor="@color/strokeColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_question" />

    <android.widget.Button
        android:id="@+id/send_button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:background="@color/transparent"
        android:fontFamily="@font/regular"
        android:text="@string/send"
        android:textColor="@color/strokeColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_question" />

</androidx.constraintlayout.widget.ConstraintLayout>