<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/error_drawable_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_error_ic"
        app:tint="@color/strokeColor" />

    <TextView
        android:id="@+id/are_you_sure_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold_roboto"
        android:text="@string/confirm_delete"
        android:textColor="@color/strokeColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_drawable_delete_dialog" />

    <TextView
        android:id="@+id/cannot_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_cannot_undo_this_action"
        android:textColor="@color/stroke_75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure" />

    <android.widget.Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:fontFamily="@font/regular"
        android:text="@string/cancel"
        android:textColor="@color/strokeColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cannot_undo" />

    <android.widget.Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:fontFamily="@font/regular"
        android:text="@string/delete"
        android:textColor="@color/failureColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/cannot_undo" />

    <TextView
        android:id="@+id/are_you_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_your_account"
        android:textColor="@color/stroke_75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure_delete_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>