<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_tertiary"
    android:layout_margin="24dp"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/TextAppearance.Material3.BodyLarge.Bold.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textColor="?colorTertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_main"
        style="@style/TextAppearance.Material3.BodyMedium.Dialog.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_password_has_been_updates_successfully"
        android:textColor="?colorOnTertiaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        style="@style/Widget.Material3.Button.TextButton.Dialog.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="?colorTertiary"
        app:layout_constraintEnd_toEndOf="@+id/text_main"
        app:layout_constraintTop_toBottomOf="@+id/text_main" />

</androidx.constraintlayout.widget.ConstraintLayout>