<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/basic_abilities_page1" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.Material3.TitleLarge.Bold.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/queue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creation_description"
        style="@style/TextAppearance.Material3.BodyMedium.Regular.QuServe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:lineSpacingMultiplier="0.5"
        android:text="@string/create_your_own_queue_serve_people_and_save_your_time_using_easy_and_comfortable_interface_which_will_also_attract_new_visitors_to_you"
        android:textColor="#EFE4FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_creation" />

    <TextView
        android:id="@+id/title_creation"
        style="@style/TextAppearance.Material3.TitleMedium.Bold.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/queue_creation"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/creation_description"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/title_join"
        style="@style/TextAppearance.Material3.TitleMedium.Bold.QuServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:text="@string/joining_to_queue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_description" />

    <TextView
        android:id="@+id/join_description"
        style="@style/TextAppearance.Material3.BodyMedium.Regular.QuServe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/become_queue_participant_and_get_estimated_time_waiting_and_a_number_of_people_before_you"
        android:textAlignment="textEnd"
        android:textColor="#EFE4FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_join" />
</androidx.constraintlayout.widget.ConstraintLayout>